# OpenPointMesh

./: .gitignore  CMakeLists.txt  Common.cmake  DeployAPIDocsGithub.config  DeployAPIDocsGithub.sh  Doxyfile  OpenPointMesh.cmake  README.md  SuperBuild.cmake  Toolchain.cmake  _about_dialog_8h_source.html  _accuracy_control_menu_8h_source.html  _cloud_registration_functions_8h.html  _cloud_registration_functions_8h_source.html  _cloud_stitcher_8h.html  _cloud_stitcher_8h_source.html  _mesh_constructor_8h.html  _mesh_constructor_8h_source.html  _o_p_m___ni_viewer_8h_source.html  _p_c_d_registration_8h_source.html  _point_cloud_filters_8h.html  _point_cloud_filters_8h_source.html  annotated.html  bug.html  class_about_dialog-members.html  class_about_dialog.html  class_accuracy_control_menu-members.html  class_accuracy_control_menu.html  class_main_window-members.html  class_main_window.html  classes.html  classvba_1_1_cloud_stitcher-members.html  classvba_1_1_cloud_stitcher.html  classvba_1_1_mesh_constructor-members.html  classvba_1_1_mesh_constructor.html  classvba_1_1_my_point_representation-members.html  classvba_1_1_my_point_representation.html  classvba_1_1_oni_to_pcd-members.html  classvba_1_1_oni_to_pcd.html  classvba_1_1_p_c_d_registration-members.html  (+25 more)
CMake/: FindBZip2.cmake  FindEXPAT.cmake  FindEigen.cmake  FindFLANN.cmake  FindFontConfig.cmake  FindFreetype.cmake  FindGraphViz.cmake  FindJPEG.cmake  FindLCMS.cmake  FindLibUSB.cmake  FindMNG.cmake  FindOpenNI2.cmake  FindPCL.cmake  FindPNG.cmake  FindQhull.cmake  FindTIFF.cmake  FindVTK.cmake  FindXnLib.cmake  FindZLIB.cmake  Findlibusb-1.0.cmake  LibFindMacros.cmake  PreventDirWithSpaces.cmake  PreventDirWithTooManyChars.cmake  PreventInBuildInstalls.cmake  PreventInSourceBuilds.cmake
SuperBuild/: External_BZip2.cmake  External_Boost.cmake  External_Boost_buildboost.cmake  External_Boost_configureboost.cmake  External_EXPAT.cmake  External_Eigen.cmake  External_FLANN.cmake  External_FontConfig.cmake  External_FontConfig_configurefontconfig.cmake  External_FontConfig_generatealias.cmake  External_FontConfig_patchfontconfig.diff  External_FontConfig_patchsrccmakelists.diff  External_FontConfig_preconfigurefontconfig.cmake  External_FreeType.cmake  External_Freetype.cmake  External_GraphViz.cmake  External_GraphViz_configuregraphviz.cmake  External_JPEG.cmake  External_LCMS.cmake  External_LibUSB.cmake  External_LibUSB_configurelibusb.cmake  External_Libtool.cmake  External_Libtool_configurelibtool.cmake  External_MNG.cmake  External_MNG_configuremng.cmake  External_MNG_moveautogen.cmake  External_OpenNI2.cmake  External_OpenNI2_builddepthutils.cmake  External_OpenNI2_builddummydevice.cmake  External_OpenNI2_buildonifile.cmake  External_OpenNI2_buildopenni2.cmake  External_OpenNI2_buildps1080.cmake  External_OpenNI2_buildpslink.cmake  External_OpenNI2_buildxnlib.cmake  External_OpenNI2_configureopenni2.cmake  External_OpenNI2_installopenni2.cmake  External_PCL.cmake  External_PNG.cmake  External_Qhull.cmake  External_Qt.cmake  (+17 more)
include/: AccuracyControlMenu.h  AccuracyControlMenu.h.save  CloudRegistrationFunctions.h  CloudStitcher.h  MeshConstructor.h  OPM_NiViewer.h  PCDRegistration.h  PointCloudFilters.h  debugger.h  errorMsgHandler.h  mainwindow.h  mainwindow.h.save  oni-to-pcd.h  viewer.h  viewer.hxx
qtest/: CMakeLists.txt
qtest/include/: CloudStitcher.h  debugger.h  filesystemHelper.h  mainwindow.h  mytestsuite.h  qtestsuite.h  sharedData.h  tst_MainWindow.h
qtest/src/: AboutDialog.cpp  AboutDialog.ui  CloudRegistrationFunctions.cpp  PCDRegistration.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mytestsuite.cpp  oni-to-pcd.cpp  qtestsuite.cpp  sharedData.cpp  tst_MainWindow.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_2.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
src/: AboutDialog.cpp  AccuracyControlMenu.cpp  AccuracyControlMenu.cpp.save  AccuracyControlMenu.ui  CMakeLists.txt  CloudRegistrationFunctions.cpp  CloudStitcher.cpp  CloudStitcher.cpp.save  Makefile  MeshConstructor.cpp  MeshConstructor.cpp.save  OPM_NiViewer.cpp  PCDRegistration.cpp  PointCloudFilters.cpp  cloud_registration.cpp  errorMsgHandler.cpp  filesystemHelper.cpp  lighteditmenu.h  main.cpp  mainwindow.cpp  mainwindow.cpp.save  mainwindow.ui  oni-to-pcd.cpp  vbaUI.pro  vbaUI.pro.user.5505561  viewer.cpp  viewer.tem
test/: CMakeLists.txt  CMakeLists.txt.save  README.md  runAllTests.sh
test/res/: finished_cloud_mesh.ply  valid_cloud.pcd
test/src/: CloudStitcherTest.cpp  FilesystemHelperTest.cpp  MeshConstructorTest.cpp  OniToPcdTest.cpp  main.cpp  main.cpp.save
viewer/: CMakeLists.txt
viewer/include/: OPM_NiViewer.h
viewer/src/: OPM_NiViewer.cpp
